# Simplex

./: CMakeLists.txt  Cargo.toml  main.cpp
data/: exemplos.txt  read.txt  testes_simplex.txt  write.txt
include/: aleatorizadorMatriz.h  matrix.h  matrix_io.h  umbrella.h
legacy/cpp/: CMakeLists.txt  main.cpp
legacy/cpp/include/: aleatorizadorMatriz.h  matrix_io.h  matrix_parser.h  problem.h  problem_io.h  problem_parser.h  umbrella.h
legacy/cpp/src/: matrix_io.cpp  problem.cpp  problem_io.cpp  problem_parser.cpp
src/: aleatorizadorMatriz.cpp  branch_and_bound.rs  lib.rs  main.rs  matrix.cpp  matrix.rs  matrix_form.rs  matrix_io.cpp  matrix_parser.cpp  normalizer.rs  phase_one.rs  phase_two.rs  problem.rs  problem_io.rs  problem_parser.rs  randomizer.rs  simplex.rs
tests/: branch_and_bound_regression.rs  simplex_regression.rs
